--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 pandas==1.4.2
+scipy==1.11.4
 streamlit==1.13.0
 numpy==1.22.3
+cdflib==0.4.7
 statsmodels==0.13.2
 matplotlib==3.5.1
 scipy==1.8.0
 astropy==5.1
+mpi4py==3.1.3
